--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "eleventy-base-blog",
   "version": "5.0.2",
+  "type": "module",
   "description": "A starter repository for a blog web site using the Eleventy static site generator.",
   "scripts": {
     "build": "eleventy",
